# ml_systems

./: .gitignore  CLAUDE.md
.claude/: settings.hooks.template.json  settings.json.prepythonw_bak  settings.json.presplit_bak  settings.local.json.presplit_bak
.claude/agent_state/: architect_state.json  auditor_state.json  change_log.jsonl  deep_state.json  file_registry.json  meta_state.json  pipeline_state.json  project_snapshot.json  researcher_state.json  tracker.py  trader_state.json  trainer_state.json  validator_state.json
.claude/agents/: expert-architect.md  expert-auditor.md  expert-discover.md  expert-narrate.md  expert-oracle.md  expert-pipeline.md  expert-quant.md  expert-researcher.md  expert-trader.md  (+4 more)
crypto/: .gitignore  CLAUDE.md  CURRENT_PLAN.md  EXECUTIVE_SUMMARY.md  OPERATIONS.md  PROJECT_NORTH_STAR.md  QUICK_START.md  RED_TEAM_ARCHITECTURE_AUDIT.txt  RED_TEAM_STRATEGY_AUDIT.txt  STATE.md  STRAT_DISCOVERY_METHODOLOGY.md  USAGE.md  USAGE_STRATEGY.md  V5_PLUS_ARCHITECTURES.md  WORLD_MODELS_SUMMARY.md  _aqr_extract.txt  _stw1999.txt  best_worst_day.py  calc_eval.py  pip_constraints.txt  requirements.txt
games/: .gitignore  CLAUDE.md  PLAY_HUMAN.md  README.md  WATCH_UI.md  play_atari.py  play_chess.py  play_connect4.py  pyproject.toml  requirements.txt  run_engines.py  run_invariants_check.py  run_tests.py  soak_run.py  watch_training.py
games/az/: CLIMB_VERDICT_2026_06_08.md  __init__.py  atari_gpu_curve_catch.json  auto_balance.py  batched_selfplay.py  bootstrap_supervised.py  chess_adapter.py  connect4.py  connect4_gpu_curve.json  connect4_hybrid.py  connect4_solver.py  dqn_minatar.py  encoding.py  eval_bootstrap.py  game_adapter.py  learning_report.py  live_viz.py  mcts.py  measure_connect4_hybrid.py  minatar_dqn_curve.json  minatar_dqn_curve_asterix.json  minatar_dqn_curve_space_invaders.json  minatar_env.py  muzero.py  muzero_rl.py  net.py  openings.py  selfplay.py  selfplay_pool.py  train_atari_gpu.py  train_connect4_gpu.py  train_demo.py  train_metrics.json  train_minatar.py  train_robust.py  uci_engine.py  verify_checkpoints.py  visualize_selfplay.py  web_viz.py
games/chess_engine/: __init__.py  bench.py  book.py  engine.py  measure_book.py  opening_book.json  perft.py  play_human.py  sf_engine.py  uci.py
games/docs/: BUILD_PLAYBOOK.md  ENGINE_AGNOSTIC_FRAMEWORK.md  MOVE_TO_OWN_REPO.md  PRE_RESTART_AUDIT_2026_06_09.md  RUN_ENGINES.md  SELFPLAY_SOTA_FEATURES.md  SELF_PLAY_GUIDE.md  STRENGTH_ROADMAP.md
games/selfplay/: __init__.py  play.py  run_engine.py  watchdog.py
games/tests/: __init__.py  _test_auto_balance.py  _test_checkpoint_split.py  _test_connect4.py  _test_eval_parallel.py  _test_game_adapter.py  _test_invariants.py  _test_mcts_parallel.py  _test_muzero.py  _test_muzero_rl.py  _test_neural_adapter.py  _test_opening_diversity.py  _test_promotion_gate.py  _test_run_engines.py  _test_selfplay_pool.py  _test_teacher_distill.py
harness/: CONTEXT.md  README.md  SKILLS.md  pyproject.toml  run.py
harness/metaop/: __init__.py  brain.py  cascade_brain.py  champion.py  config.py  dspy_planner.py  eval_harness.py  evolve.py  experts.py  graph.py  learnings.py  manager.py  memory.py  selfimprove.py  skills.py  tools.py  worker.py
harness/skills/: README.md
harness/skills/author-skill/: SKILL.md
harness/skills/debug-failure/: SKILL.md
harness/skills/plan-first/: SKILL.md
harness/skills/red-team/: SKILL.md
harness/skills/reflect/: SKILL.md
harness/skills/research-web/: SKILL.md
harness/skills/self-evolve/: SKILL.md
harness/skills/write-verifiable/: SKILL.md
(+2672 files in other folders)
